content/en/platform/corda/1.0/cenm/_index.md
---
aliases:
- /releases/release-1.0/index.html
date: '2020-01-08T09:59:25Z'
menu:
  versions:
    weight: 340
  cenm-1-0:
    weight: 1
    name: CENM 1.0
project: corda
section_menu: cenm-1-0
title: CENM 1.0
version: 'CENM 1.0'
---


# Welcome to the Corda Enterprise Network Manager!

The Corda Enterprise Network Manager is a commercial offering from R3 that facilitates the operation of a bespoke
Corda Network that gives the operator full control over all aspects of deployment, operation, and the consensus rules.
This is provided as an alternative to taking advantage of utilising the service-level-managed production components
that are otherwise be available from [Corda Network](https://corda.network), governed by the independent
Corda Network Foundation.

The *Corda Enterprise Network Manager* encompasses three main services:


* [Identity Manager Service](../../../../../en/platform/corda/1.0/cenm/identity-manager.md) - Enables nodes to join the network, as well as handles revocation of a nodes certificate
* [Network Map Service](../../../../../en/platform/corda/1.0/cenm/network-map.md) - Provides a global view of the network
* [Signing Service](../../../../../en/platform/corda/1.0/cenm/signing-service.md) - Provides a way to sign approved requests to join the network (CSRs) or revoke a certificate
(CRRs) as well as changes to the network map

For a quick start guide on running the ENM services see [Enterprise Network Manager Quick-Start Guide](../../../../../en/platform/corda/1.0/cenm/quick-start.md).


Concepts and Overview

* [Compatibility Zones](../../../../../en/platform/corda/1.0/cenm/compatibility-zones.md)
* [Components of the Corda Enterprise Network Manager](../../../../../en/platform/corda/1.0/cenm/enm-components.md)
* [The Workflow](../../../../../en/platform/corda/1.0/cenm/enm-components.html#the-workflow)
* [Databases](../../../../../en/platform/corda/1.0/cenm/enm-components.html#databases)
* [Public Key Infrastructure](../../../../../en/platform/corda/1.0/cenm/enm-components.html#public-key-infrastructure)
* [The Node](../../../../../en/platform/corda/1.0/cenm/enm-components.html#the-node)
* [Sub Zones](../../../../../en/platform/corda/1.0/cenm/sub-zones.md)
* [Network Map Overview](../../../../../en/platform/corda/1.0/cenm/network-map-overview.md)
* [Certificate Revocation List (CRL)](../../../../../en/platform/corda/1.0/cenm/certificate-revocation.md)




ENM Releases

* [Release notes](../../../../../en/platform/corda/1.0/cenm/release-notes.md)
* [Upgrading Corda Enterprise Network Manager](../../../../../en/platform/corda/1.0/cenm/upgrade-notes.md)
* [Changelog](../../../../../en/platform/corda/1.0/cenm/changelog.md)




Operations

* [Enterprise Network Manager Quick-Start Guide](../../../../../en/platform/corda/1.0/cenm/quick-start.md)
* [Identity Manager Service](../../../../../en/platform/corda/1.0/cenm/identity-manager.md)
* [Network Map Service](../../../../../en/platform/corda/1.0/cenm/network-map.md)
* [Signing Service](../../../../../en/platform/corda/1.0/cenm/signing-service.md)
* [Updating the network parameters](../../../../../en/platform/corda/1.0/cenm/updating-network-parameters.md)
* [Upgrading Corda Enterprise Network Manager](../../../../../en/platform/corda/1.0/cenm/upgrade-notes.md)
* [ENM Databases](../../../../../en/platform/corda/1.0/cenm/database-set-up.md)
* [Troubleshooting Common Issues](../../../../../en/platform/corda/1.0/cenm/troubleshooting-common-issues.md)




Configuration

* [Identity Manager Configuration Parameters](../../../../../en/platform/corda/1.0/cenm/config-identity-manager-parameters.md)
* [Network Map Configuration Parameters](../../../../../en/platform/corda/1.0/cenm/config-network-map-parameters.md)
* [Network Parameters](../../../../../en/platform/corda/1.0/cenm/config-network-parameters.md)
* [Configuring the ENM services to use SSL](../../../../../en/platform/corda/1.0/cenm/enm-with-ssl.md)
* [Workflow](../../../../../en/platform/corda/1.0/cenm/workflow.md)
* [Example response to a node when its CSR has been rejected:](../../../../../en/platform/corda/1.0/cenm/workflow.html#example-response-to-a-node-when-its-csr-has-been-rejected)




Tools & Utilities

* [Tools & Utilities](../../../../../en/platform/corda/1.0/cenm/tools-index.md)
* [Embedded Shell](../../../../../en/platform/corda/1.0/cenm/shell.md)




Private Networks

* [Private Network Map](../../../../../en/platform/corda/1.0/cenm/private-network-map.md)




Public Key Infrastructure

* [Certificate Hierarchy Generation using the PKI Tool](../../../../../en/platform/corda/1.0/cenm/pki-guide.md)
* [Public Key Infrastructure (PKI) Tool](../../../../../en/platform/corda/1.0/cenm/pki-tool.md)
